--- a/README
+++ b/README
@@ -1,8 +1,7 @@
 This repository contains python scripts as well as
 AMBER files related to the manuscript entitled:
-"""
-Digitizing Poly-L-Lysine Dendrigrafts: from Experimental Data to
-Molecular Dynamics Simulations
-"""
-by Jean-Patrick Francoia, Jean-Christophe Rossi, Gerald Monard, and Laurent Vial
 
+# Digitizing Poly-L-Lysine Dendrigrafts: from Experimental Data to
+Molecular Dynamics Simulations
+
+by Jean-Patrick Francoia, Jean-Christophe Rossi, Gerald Monard, and Laurent Vial
